--- a/{{cookiecutter.app_name}}/.travis.yml
+++ b/{{cookiecutter.app_name}}/.travis.yml
@@ -4,6 +4,7 @@ language: python
 python:
   - 3.6
 install:
-  - pip install -r requirements.txt
+  - pip install pipenv
+  - pipenv install
 script:
   - python -m unittest tests.py
