--- a/{{cookiecutter.app_name}}/Pipfile
+++ b/{{cookiecutter.app_name}}/Pipfile
@@ -1,5 +1,5 @@
 [[source]]
-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+url = "https://pypi.doubanio.com/simple"
 verify_ssl = true
 name = "pypi"
 
@@ -13,9 +13,3 @@ Flask = "*"
 Flask-SQLAlchemy = "*"
 Flask-Login = "*"
 python-dotenv = "*"
-
-[dev-packages]
-pytest = "*"
-
-[requires]
-python_version = "3.7"
