--- a/{{cookiecutter.app_name}}/Pipfile
+++ b/{{cookiecutter.app_name}}/Pipfile
@@ -13,17 +13,14 @@ Flask = "*"
 Flask-SQLAlchemy = "*"
 Flask-Login = "*"
 python-dotenv = "*"
-
 {% if cookiecutter.better_dev_experience == "yes" %}
 [dev-packages]
 coverage = "*"
 pdir2 = "*"
 ptpython = "*"
 yapf = "*"
-{% endif %}
 
 [scripts]
 test = "python -m unittest discover"
-{% if cookiecutter.better_dev_experience == "yes" %}
 coverage = "coverage run -m unittest discover"
-{% endif %}
+{%- endif -%}
