--- a/{{cookiecutter.app_name}}/Pipfile
+++ b/{{cookiecutter.app_name}}/Pipfile
@@ -13,6 +13,8 @@ Flask = "*"
 Flask-SQLAlchemy = "*"
 Flask-Login = "*"
 python-dotenv = "*"
+"psycopg2" = "*"
+gunicorn = "*"
 {% if cookiecutter.better_dev_experience == "yes" %}
 [dev-packages]
 coverage = "*"
